--- a/main.html
+++ b/main.html
@@ -10,10 +10,13 @@
 
 <body>
 	<table id="sampleTable" border="1"> 
-		<tr><td>Row1 cell1</td> 
+		<tbody id="tbody">
+			<tr><td>Row1 cell1</td> 
 		<td>Row1 cell2</td></tr> 
 		<tr><td>Row2 cell1</td> 
 		<td>Row2 cell2</td></tr> 
+		</tbody>
+		
 	</table><br> 
 	
 	<input type="button" onclick="insert_Row()" value="Insert row">  
